--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+langgraph==1.0.8
+langchain-core==0.3.72
+langchain==0.3.27
+langchain-groq==0.2.0
 streamlit
-langgraph==0.0.53
-langchain
-langchain-groq
-groq
 python-dotenv
