Update requirements for langchain and streamlit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-langgraph==1.0.8
-langchain-core==0.3.72
-langchain==0.3.27
-langchain-groq==0.2.0
 streamlit
+langgraph==1.0.8
+langchain==0.3.27
+langchain-core==0.3.72
+langchain-groq
 python-dotenv
